fix api schema for minimum run
