# back/models/api.gen.go
@@ -1,0 +1,358 @@
+// Package models provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
+package models
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/labstack/echo/v4"
+	"github.com/oapi-codegen/runtime"
+)
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+	// 口座の一覧を取得します
+	// (GET /accounts)
+	GetAccounts(ctx echo.Context) error
+	// 新しい口座を登録します
+	// (POST /accounts)
+	AddAccount(ctx echo.Context) error
+	// Deletes a account
+	// (DELETE /accounts/{id})
+	DeleteAccount(ctx echo.Context, id int64) error
+	// Find account by ID
+	// (GET /accounts/{id})
+	GetAccountById(ctx echo.Context, id int64) error
+	// Updates a accounts in the store with form data
+	// (POST /accounts/{id})
+	UpdateAccount(ctx echo.Context, id int64, params UpdateAccountParams) error
+	// カテゴリーの一覧を取得します
+	// (GET /categories)
+	GetCategories(ctx echo.Context) error
+	// 新しいカテゴリーを登録します
+	// (POST /categories)
+	AddCategory(ctx echo.Context) error
+	// Deletes a category
+	// (DELETE /categories/{id})
+	DeleteEvent(ctx echo.Context, id int64) error
+	// Find cateogry by ID
+	// (GET /categories/{id})
+	GetEventById(ctx echo.Context, id int64) error
+	// Updates a category in the store with form data
+	// (POST /categories/{id})
+	UpdateCategory(ctx echo.Context, id int64, params UpdateCategoryParams) error
+	// 収入/支出の一覧を取得します
+	// (GET /monetary-events)
+	GetMonetaryEvents(ctx echo.Context) error
+	// 新しい収入/支出を登録します
+	// (POST /monetary-events)
+	AddMonetaryEvent(ctx echo.Context) error
+	// Deletes a monetary event
+	// (DELETE /monetary-events/{id})
+	DeletemonetaryEvent(ctx echo.Context, id int64) error
+	// Find monetary event by ID
+	// (GET /monetary-events/{id})
+	GetMonetaryEventById(ctx echo.Context, id int64) error
+	// Updates a monetary events in the store with form data
+	// (POST /monetary-events/{id})
+	UpdateMonetaryEvent(ctx echo.Context, id int64, params UpdateMonetaryEventParams) error
+}
+
+// ServerInterfaceWrapper converts echo contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler ServerInterface
+}
+
+// GetAccounts converts echo context to params.
+func (w *ServerInterfaceWrapper) GetAccounts(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetAccounts(ctx)
+	return err
+}
+
+// AddAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) AddAccount(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.AddAccount(ctx)
+	return err
+}
+
+// DeleteAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteAccount(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.DeleteAccount(ctx, id)
+	return err
+}
+
+// GetAccountById converts echo context to params.
+func (w *ServerInterfaceWrapper) GetAccountById(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetAccountById(ctx, id)
+	return err
+}
+
+// UpdateAccount converts echo context to params.
+func (w *ServerInterfaceWrapper) UpdateAccount(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params UpdateAccountParams
+	// ------------- Optional query parameter "name" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "name", ctx.QueryParams(), &params.Name)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter name: %s", err))
+	}
+
+	// ------------- Optional query parameter "status" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "status", ctx.QueryParams(), &params.Status)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter status: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.UpdateAccount(ctx, id, params)
+	return err
+}
+
+// GetCategories converts echo context to params.
+func (w *ServerInterfaceWrapper) GetCategories(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetCategories(ctx)
+	return err
+}
+
+// AddCategory converts echo context to params.
+func (w *ServerInterfaceWrapper) AddCategory(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.AddCategory(ctx)
+	return err
+}
+
+// DeleteEvent converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteEvent(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.DeleteEvent(ctx, id)
+	return err
+}
+
+// GetEventById converts echo context to params.
+func (w *ServerInterfaceWrapper) GetEventById(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetEventById(ctx, id)
+	return err
+}
+
+// UpdateCategory converts echo context to params.
+func (w *ServerInterfaceWrapper) UpdateCategory(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params UpdateCategoryParams
+	// ------------- Optional query parameter "name" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "name", ctx.QueryParams(), &params.Name)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter name: %s", err))
+	}
+
+	// ------------- Optional query parameter "status" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "status", ctx.QueryParams(), &params.Status)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter status: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.UpdateCategory(ctx, id, params)
+	return err
+}
+
+// GetMonetaryEvents converts echo context to params.
+func (w *ServerInterfaceWrapper) GetMonetaryEvents(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetMonetaryEvents(ctx)
+	return err
+}
+
+// AddMonetaryEvent converts echo context to params.
+func (w *ServerInterfaceWrapper) AddMonetaryEvent(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.AddMonetaryEvent(ctx)
+	return err
+}
+
+// DeletemonetaryEvent converts echo context to params.
+func (w *ServerInterfaceWrapper) DeletemonetaryEvent(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.DeletemonetaryEvent(ctx, id)
+	return err
+}
+
+// GetMonetaryEventById converts echo context to params.
+func (w *ServerInterfaceWrapper) GetMonetaryEventById(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetMonetaryEventById(ctx, id)
+	return err
+}
+
+// UpdateMonetaryEvent converts echo context to params.
+func (w *ServerInterfaceWrapper) UpdateMonetaryEvent(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params UpdateMonetaryEventParams
+	// ------------- Optional query parameter "name" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "name", ctx.QueryParams(), &params.Name)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter name: %s", err))
+	}
+
+	// ------------- Optional query parameter "status" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "status", ctx.QueryParams(), &params.Status)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter status: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.UpdateMonetaryEvent(ctx, id, params)
+	return err
+}
+
+// This is a simple interface which specifies echo.Route addition functions which
+// are present on both echo.Echo and echo.Group, since we want to allow using
+// either of them for path registration
+type EchoRouter interface {
+	CONNECT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	DELETE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	GET(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	HEAD(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	OPTIONS(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	PATCH(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	POST(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	PUT(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+	TRACE(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route
+}
+
+// RegisterHandlers adds each server route to the EchoRouter.
+func RegisterHandlers(router EchoRouter, si ServerInterface) {
+	RegisterHandlersWithBaseURL(router, si, "")
+}
+
+// Registers handlers, and prepends BaseURL to the paths, so that the paths
+// can be served under a prefix.
+func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL string) {
+
+	wrapper := ServerInterfaceWrapper{
+		Handler: si,
+	}
+
+	router.GET(baseURL+"/accounts", wrapper.GetAccounts)
+	router.POST(baseURL+"/accounts", wrapper.AddAccount)
+	router.DELETE(baseURL+"/accounts/:id", wrapper.DeleteAccount)
+	router.GET(baseURL+"/accounts/:id", wrapper.GetAccountById)
+	router.POST(baseURL+"/accounts/:id", wrapper.UpdateAccount)
+	router.GET(baseURL+"/categories", wrapper.GetCategories)
+	router.POST(baseURL+"/categories", wrapper.AddCategory)
+	router.DELETE(baseURL+"/categories/:id", wrapper.DeleteEvent)
+	router.GET(baseURL+"/categories/:id", wrapper.GetEventById)
+	router.POST(baseURL+"/categories/:id", wrapper.UpdateCategory)
+	router.GET(baseURL+"/monetary-events", wrapper.GetMonetaryEvents)
+	router.POST(baseURL+"/monetary-events", wrapper.AddMonetaryEvent)
+	router.DELETE(baseURL+"/monetary-events/:id", wrapper.DeletemonetaryEvent)
+	router.GET(baseURL+"/monetary-events/:id", wrapper.GetMonetaryEventById)
+	router.POST(baseURL+"/monetary-events/:id", wrapper.UpdateMonetaryEvent)
+
+}
